Add image likes and clean up interaction handling

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,5 @@ discordKtVersion=0.22.0
 okHttpVersion=4.9.0
 klaxonVersion=5.5
 scrimageVersion=4.0.22
+exposedVersion=0.31.1
+mysqlConnectorVersion=5.1.48
